# 3DGraph

./: .gitignore  CMakeLists.txt  README.md  build.rar  dependencies.rar  source.rar
docs/: Error Codes.txt  General.mdj
resources/models/: sphere.blend
resources/shaders/simple/: simple.fshader  simple.vshader
resources/shaders/simple_model/: simple_model.fshader  simple_model.vshader
resources/shaders/simple_phong/: simple_phong.fshader  simple_phong.vshader
src/: graph3d.cpp  graph3d.h
src/app/: app.cpp  app.h
src/core/: context.h  context_type.h  graph3d.h
src/entity/: camera.h  entity.h  light.h  object.h
src/entity/lights/: directional.h
src/exceptions/: exception.h  messages.cpp  messages.h  warning.h
src/opengl/: drawer.h  mesh.h  model.h  monitor.cpp  monitor.h  opengl.h  shader.h  viewport.h  window.h
src/util/: bounds.h  dimension.h  logger.h  pipe.h  resizer.h  resources.h  sleep.h
